<resources>
    <string name="app_name">my</string>
    <string name="long_marquee_text">long long long long long long long long long long long text</string>
    <string name="marquee_text_view_demo">MarqueeTextViewDemo</string>
    <string name="rotation_property_demo">RotationPropertyDemo</string>
    <string name="scale_property_demo">ScalePropertyDemo</string>
    <string name="transition_activity_demo">ActivityTransition</string>
    <string name="slide_vertical">SlideVertical</string>
    <string name="slide_horizontal">SlideHorizontal</string>
    <string name="fade">Fade</string>
    <string name="lottie_demo">LottieDemo</string>
    <string name="fragment_lifecycle_demo">FragmentLifecycleDemo</string>
    <string name="hello_fragment">Hello Fragment!</string>
    <string name="fragment_dynamic_demo">DynamicAddFragmentDemo</string>
    <string name="pick_color">Pick Background Color</string>
    <string name="fragment_arguments_demo">ArgumentsDemo</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="fragment_view_pager_demo">ViewPagerDemo</string>
    <string name="fragment_communication_demo">FragmentCommunicationDemo</string>
    <string name="update_title">Update Title</string>
    <string name="collect">收藏</string>
    <string name="fragment_master_detail_demo">MasterDetailDemo</string>
    <string name="fragment_view_pager_strip_demo">ViewPagerWithStripDemo</string>


    <string name="title_login_register">登录/注册</string>
    <string name="action_get_verify_code">获取验证码</string>

    <string name="title_login">登录</string>
    <string name="title_login_by_verify_code">验证码登录</string>
    <string name="title_register">注册</string>
    <string name="lab_forget_password">忘记密码?</string>
    <string name="lab_login_by_verify_code">验证码登录</string>
    <string name="lab_login_by_password">密码登录</string>
    <string name="tip_please_input_phone_number">请输入手机号码</string>
    <string name="title_phone_number">手机号码</string>
    <string name="title_password">密码</string>
    <string name="title_old_password">旧密码</string>
    <string name="hint_please_input_verify_code">请输入验证码</string>
    <string name="lab_verify_code">验证码</string>
    <string name="tip_password_error">密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_new_password_error">新密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_phone_number_error">无效的手机号！</string>
    <string name="regex_phone_number">^((13[0-9])|(14[5,7])|(15[0-3,5-9])|(16[6])|(17[0,1,3,5-8])|(18[0-9])|(19[8,9]))\\d{8}$</string>
    <string name="tip_verify_code_error">请输入4位数验证码</string>
    <string name="regex_verify_code">^\\d{4}$</string>
    <string name="regex_password">^(?:(?=.*[a-zA-Z])(?=.*[0-9])).{8,18}$</string>
    <string name="title_forget_password">重置密码</string>
    <string name="lab_register_account">点击注册即表示同意</string>
    <string name="lab_service_protocol"><![CDATA[<用户协议>]]></string>
    <string name="url_add_qq_group"><![CDATA[https://qm.qq.com/cgi-bin/qm/qr?k=0lUqsbfHTNDbS2KK4nTPwPq07tOqAk6J&authKey=4PzQ2cQYIr28Qyg%2FkTk%2BmI7xlcq8B0IZKZGc1H3XloRrCDBO8az97DIsBHnQW0Ya]]></string>
    <string name="basic">Basic</string>
    <string name="disable">DISABLE</string>
    <string name="edit_teamleader">单击编辑生产组组长</string>
    <string name="edit_task_name">单击编辑任务名</string>
    <string name="back_url">3s784625n5.qicp.vip:80</string>>

</resources>
