<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:orientation="vertical" tools:ignore="MissingDefaultResource">
    <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@mipmap/ic_launcher_round" />
    <TextView
            style="@style/TextStyle.Title"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:text="注 册"
            android:textSize="30sp" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:tint="?attr/colorAccent"
                    app:srcCompat="@drawable/ic_phone" tools:ignore="VectorDrawableCompat"/>
            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:hint="@string/tip_please_input_phone_number"
                    android:inputType="number"
                    app:met_clearButton="true"
                    app:met_errorMessage="@string/tip_phone_number_error"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelText="@string/title_phone_number"
                    app:met_regexp="@string/regex_phone_number" />
        </FrameLayout>
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:tint="?attr/colorAccent"
                    app:srcCompat="@drawable/ic_type_grid" tools:ignore="VectorDrawableCompat"/>
            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                    android:id="@+id/et_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:hint="请输入用户名"
                    android:inputType="text"
                    app:met_clearButton="true"
                    app:met_errorMessage="用户名不符合规范"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelText="用户名"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/fl_new_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:tint="?attr/colorAccent"
                    app:srcCompat="@drawable/ic_password"/>

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/et_new_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:hint="请输入密码"
                android:inputType="textPassword"
                app:met_clearButton="false"
                app:met_errorMessage="密码格式错误"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="您的密码"
                app:met_regexp="@string/regex_password" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_confirm_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_password"/>

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/et_confirm_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:hint="请确认输入的密码"
                android:inputType="textPassword"
                app:met_clearButton="false"
                app:met_errorMessage="两次输入密码不同"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="再次确认密码"
                app:met_regexp="@string/regex_password" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_type_list" tools:ignore="VectorDrawableCompat"/>
            <com.xuexiang.xui.widget.spinner.materialspinner.MaterialSpinner
                android:id="@+id/spinner"
                style="@style/Material.SpinnerStyle"
                android:layout_marginStart="40dp"
                android:layout_marginTop="?attr/xui_config_content_spacing_vertical"
                android:hint="请选择申请的角色"
                app:ms_entries="@array/role"
                />
        </FrameLayout>


    </LinearLayout>
    <com.xuexiang.xui.widget.textview.supertextview.SuperButton
            android:id="@+id/btn_register"
            style="@style/SuperButton.Primary.Login"
            android:layout_marginTop="16dp"
            android:text="注册" />

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_width="wrap_content"
                    android:text="登陆/注册代表您已阅读并同意"
                    android:textColor="@color/xui_config_color_primary_text" />

            <com.xuexiang.xui.widget.alpha.XUIAlphaTextView
                    android:id="@+id/tv_user_protocol"
                    style="@style/TextStyle.Explain"
                    android:layout_width="wrap_content"
                    android:text="用户协议"
                    android:textColor="?attr/colorAccent" />

            <TextView
                    style="@style/TextStyle.Explain"
                    android:layout_width="wrap_content"
                    android:text="和"
                    android:textColor="@color/xui_config_color_primary_text" />

            <com.xuexiang.xui.widget.alpha.XUIAlphaTextView
                    android:id="@+id/tv_privacy_protocol"
                    style="@style/TextStyle.Explain"
                    android:layout_width="wrap_content"
                    android:text="隐私政策"
                    android:textColor="?attr/colorAccent" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>
